# chrome_plus_fast

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CSP_FIX_REPORT.md  DEVELOPER_GUIDE.md  LLM_CHAT_DESIGN.md  PLAN.md  PLAYWRIGHT_TEST_REPORT.md  PROJECT_DOCUMENTATION.md  PROXY_DEMO.md  PROXY_FEATURE_README.md  PROXY_USER_GUIDE.md  QUICK_START.md  README.md  UPGRADE_COMPLETE.md  UPGRADE_SUMMARY.md  api.js  background.js  chat.js  compatibility_check.py  compatibility_report.json  config.js  docker-compose.yml  file-manager.js  fix-apple-silicon.sh  fix-docker-complete.sh  fix-docker-mirrors.sh  fix-docker-network.sh  manifest.json  quick-fix-docker-limits.sh  quick_test.py  setup-docker-mirrors.sh  sidepanel.css  sidepanel.html  start-v2.sh  test_chrome_extension.py  test_chrome_plus_v2.py  test_extension.html  test_integration.py  test_proxy_functionality.py  (+1 more)
docs/: CLEANUP_REPORT.md  COMPREHENSIVE_TECHNICAL_DESIGN.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_DESIGN_DOCUMENT.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_ANALYSIS_OPTIMIZATION_REPORT_V2.1.1.md  MIGRATION_GUIDE.md  OptimizationPlan.md  Optimized_design.md  PROJECT_ANALYSIS_REPORT.md  README.md  SERVER_HOST_CONFIGURATION_GUIDE.md  SYSTEM_UPGRADE_CLEANUP_REPORT_V2.1.1.md  TECHNICAL_DESIGN_REPORT.md  USER_GUIDE.md  USER_MANUAL.md  VERSION_UPGRADE_REPORT_V2.1.0.md
scripts/: build-extension.sh  dev-setup.sh  docker-dev.sh
server/: .env  .env.docker  .env.example  .history.json  .history.md  Dockerfile  FASTAPI_MIGRATION.md  MIGRATION_SUMMARY.md  agent_tools.py  config.py  dump.rdb  main.py  pyproject.toml  quick_verify.py  requirements.txt  requirements_minimal.txt  simple_agent_main.py  simple_main.py  simple_server.py  start_server.py  tasks.py  test_fastapi.py  test_manual.py  test_v2_architecture.py
server/test/: list_example.txt  neural_network.py
