[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "anyio==4.9.0",
    "appnope==0.1.4",
    "boto3==1.38.13",
    "botocore==1.38.13",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "decorator==5.1.1",
    "fastavro==1.10.0",
    "filelock==3.18.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.31.1",
    "idna==3.10",
    "importlib-metadata>=6.0",
    "lxml==5.4.0",
    "multidict==6.4.3",
    "numpy==2.2.5",
    "openai==1.78.0",
    "packaging==24.2",
    "platformdirs==4.3.8",
    "psutil==5.9.7",
    "pyasn1==0.6.1",
    "pydantic==2.11.4",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sse-starlette==2.3.4",
    "starlette>=0.40.0,<0.42.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "typing-extensions>=4.11,<5",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "yarl==1.20.0",
    "zipp==3.18.2",
    "fastapi>=0.104.0,<0.116.0",
    "pydantic-ai[tavily]==0.3.3",
    "pytest>=8.4.1",
]
